[Fix] 登録メール重複チェック不具合、日数掛け率z-index・モーダルは毎回スクロール0に戻す、本人確認アラート文言

--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -315,7 +315,7 @@ p {
 .popup {
   z-index: 600;
 }
-.menuable__content__active{ // date-picker
+.menuable__content__active:has(.v-picker){ // date-picker
   z-index: 101 !important;
 }
 
